# REPrise

./: .gitignore  CLAUDE.md  ECOLI_COMPARISON_REPORT.md  GEMINI.md  LARGE_MANY_CONTIGS_SEQUENCES_PLAN.md  MISSING_FAMILIES_ANALYSIS.md  Makefile  PHASE1_IMPLEMENTATION_REPORT.md  PHASE2_IMPLEMENTATION_REPORT.md  PHASE_3_PIPELINE_DESIGN.md  PRODUCTION_READY_SUMMARY.md  QUALITY_PHASE.md  REPrise.cpp  compare_outputs.py  conversion_status.md  cpp_new.json  ecoli_cpp_test.freq  final_comparison.py  function_spec.md  test_entropy  test_entropy.rs  test_entropy2  test_entropy2.rs  test_sufr.rs
.claude/agents/: concurrency-validator.md  genomics-specialist.md  integration-specialist.md  performance-optimizer.md  testing-architect.md
REPrise-rs/: Cargo.toml  MEMORY_OPTIMIZATIONS.md  TODO.md  test_entropy.rs  test_with_all.masked  test_with_bed.bed
REPrise-rs/examples/: enhanced_quality_demo.rs  mask_benchmark.rs  mask_demo.rs  phase2_demo.rs  phase3_pipeline_demo.rs
REPrise-rs/src/: alignment.rs  config.rs  error.rs  genome.rs  index.rs  kmer.rs  lib.rs  logging.rs  main.rs  main_cpp_port.rs  main_optimized.rs  mask.rs  memory_pool.rs  output.rs  pipeline.rs  quality_integration_example.rs  recovery.rs  streaming.rs  system.rs
REPrise-rs/src/alg/: repeat.rs
REPrise-rs/src/quality/: consensus.rs  extension.rs  filtering.rs  masking.rs  mod.rs  validation.rs
REPrise-rs/tests/: debug_paths.rs  ecoli_equivalence.rs  equiv.rs  mask_stress_test.rs  production_features.rs  simple_equivalence.rs
docs/: rep_conversion_status.md
eval/: compare_equiv.py
reprise-rs/: Cargo.toml
reprise-rs/src/: cli.rs  lib.rs  main.rs  reprise.rs  utils.rs
reprise-rs/tests/: basic.rs
tools/: eq_cpp.cpp
