[package]
name = "REPrise-rs"
version = "0.1.0"
edition = "2024"

[profile.release]
debug = true  # Enable debug info for profiling

[lib]
name = "reprise"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
rayon = "1.7"
suffix = "1.3.0"
# High-performance concurrency and data structures
crossbeam = "0.8"
ahash = "0.8"
# Error handling
thiserror = "1.0"
anyhow = "1.0"
# FASTA/Q parsing
needletail = "0.5"
# Optional high-performance allocator
mimalloc = { version = "0.1", optional = true }

# Test-only dependencies for JSON emission
[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Concurrency testing framework
loom = "0.7"
# Temporary files for testing
tempfile = "3.0"

[features]
default = []
mimalloc = ["dep:mimalloc"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)'] }
