[package]
name = "REPrise-rs"
version = "0.1.0"
edition = "2024"

[profile.release]
debug = true  # Enable debug info for profiling

[lib]
name = "reprise"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
rayon = "1.10.0"
suffix = "1.0.1"
num_cpus = "1.16.0"
# High-performance concurrency and data structures
crossbeam = "0.8"
crossbeam-channel = "0.5"
ahash = "0.8"
# Error handling
thiserror = "1.0"
anyhow = "1.0"
# FASTA/Q parsing
needletail = "0.5"
# SIMD-accelerated sequence alignment
block-aligner = { version = "0.5", features = ["simd_avx2"] }
# Progress bars and UI
indicatif = "0.17"
# Optional high-performance allocator
mimalloc = { version = "0.1", optional = true }
# Memory-mapped files and disk-based storage
memmap2 = "0.9"
# Bloom filters for fast membership tests
bloom = "0.3"

# Production logging and monitoring
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter", "chrono", "local-time"] }
tracing-appender = "0.2"
tracing-chrome = "0.7"

# Configuration management
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
serde_yaml = "0.9"
config = "0.14"
validator = { version = "0.16", features = ["derive"] }

# Output compression and formats
flate2 = "1.0"
bzip2 = "0.4"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# System integration and monitoring
signal-hook = "0.3"
sysinfo = "0.30"
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "sync", "time"], optional = true }
once_cell = "1.19"

# Checkpoint and recovery
bincode = "1.3"
sha2 = "0.10"
libc = "0.2"

# Test-only dependencies for JSON emission
[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Concurrency testing framework
loom = "0.7"
# Temporary files for testing
tempfile = "3.0"

[[bin]]
name = "REPrise-optimized"
path = "src/main_optimized.rs"

[[bin]]
name = "reprise-cpp-port"
path = "src/bin/reprise_cpp_port.rs"

[[bin]]
name = "reprise-streaming"
path = "src/bin/reprise_streaming.rs"

[features]
default = []
mimalloc = ["dep:mimalloc"]
async = ["dep:tokio"]
production = ["async"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)'] }
